tests/snapshots/error_envelope_golden__error_envelope_configuration.snap
---
source: tests/error_envelope_golden.rs
expression: value
---
{
  "schema": "ee.error.v2",
  "error": {
    "code": "configuration",
    "message": "Invalid config file format.",
    "severity": "medium",
    "repair": "ee doctor --fix-plan --json",
    "repairKind": "actionable",
    "details": {}
  }
}
