tests/snapshots/error_envelope_golden__error_envelope_graph.snap
---
source: tests/error_envelope_golden.rs
expression: value
---
{
  "schema": "ee.error.v2",
  "error": {
    "code": "graph",
    "message": "Graph projection outdated.",
    "severity": "medium",
    "repair": "ee graph snapshot refresh",
    "repairKind": "actionable",
    "details": {}
  }
}
