tests/snapshots/error_envelope_golden__error_envelope_import.snap
---
source: tests/error_envelope_golden.rs
expression: value
---
{
  "schema": "ee.error.v2",
  "error": {
    "code": "import",
    "message": "CASS session file not found.",
    "severity": "medium",
    "repair": "ee import cass --dry-run",
    "repairKind": "actionable",
    "details": {}
  }
}
