tests/snapshots/error_envelope_golden__error_envelope_migration_drift.snap
---
source: tests/error_envelope_golden.rs
expression: value
---
{
  "schema": "ee.error.v2",
  "error": {
    "code": "migration_drift",
    "message": "Applied migrations do not match expected checksums.",
    "severity": "high",
    "repair": "ee doctor --fix-plan --json",
    "repairKind": "actionable",
    "details": {
      "recovery": [
        {
          "priority": 1,
          "kind": "migration",
          "rationale": "Inspect drift details before deciding repair path.",
          "riskClass": "read_only_probe",
          "requiresHumanApproval": false,
          "mutatesExternalState": false,
          "mutatesTrackerState": false,
          "privacyClass": "bounded_command_no_raw_state",
          "evidence": [
            "read_only_probe_command"
          ],
          "command": "ee migrate status --workspace . --json"
        }
      ]
    }
  }
}
