tests/snapshots/error_envelope_golden__error_envelope_migration_required.snap
---
source: tests/error_envelope_golden.rs
expression: value
---
{
  "schema": "ee.error.v2",
  "error": {
    "code": "migration_required",
    "message": "Database schema is at version 5, current is 7.",
    "severity": "medium",
    "repair": "ee migrate run",
    "repairKind": "actionable",
    "details": {
      "recovery": [
        {
          "priority": 1,
          "kind": "migration",
          "rationale": "Apply outstanding migrations; idempotent and audit-logged.",
          "riskClass": "mutating_local_repair",
          "preflightCommand": "ee preflight check --cmd 'ee migrate run --workspace . --to v0.2' --workspace . --json",
          "requiresHumanApproval": false,
          "mutatesExternalState": false,
          "mutatesTrackerState": false,
          "privacyClass": "bounded_command_no_raw_state",
          "manualStep": "Review the dry-run or recovery details before applying.",
          "evidence": [
            "local_state_repair_command"
          ],
          "preconditions": [
            "workspace_must_be_explicit"
          ],
          "command": "ee migrate run --workspace . --to v0.2"
        }
      ]
    }
  }
}
