tests/snapshots/error_envelope_golden__error_envelope_policy_denied.snap
---
source: tests/error_envelope_golden.rs
expression: value
---
{
  "schema": "ee.error.v2",
  "error": {
    "code": "policy_denied",
    "message": "Redaction policy prevents exporting this memory.",
    "severity": "medium",
    "repair": "ee policy show",
    "repairKind": "actionable",
    "details": {}
  }
}
