tests/snapshots/error_envelope_golden__error_envelope_search_index.snap
---
source: tests/error_envelope_golden.rs
expression: value
---
{
  "schema": "ee.error.v2",
  "error": {
    "code": "search_index",
    "message": "Index is stale (generation 9, database generation 12).",
    "severity": "medium",
    "repair": "ee index rebuild",
    "repairKind": "actionable",
    "details": {
      "recovery": [
        {
          "priority": 1,
          "kind": "migration",
          "rationale": "Rebuild the index from current memory state; idempotent.",
          "riskClass": "idempotent_refresh",
          "requiresHumanApproval": false,
          "mutatesExternalState": false,
          "mutatesTrackerState": false,
          "privacyClass": "bounded_command_no_raw_state",
          "evidence": [
            "derived_asset_refresh_command"
          ],
          "preconditions": [
            "workspace_must_be_explicit"
          ],
          "command": "ee index rebuild --workspace ."
        },
        {
          "priority": 2,
          "kind": "migration",
          "rationale": "Inspect index state before rebuilding (faster diagnosis).",
          "riskClass": "read_only_probe",
          "requiresHumanApproval": false,
          "mutatesExternalState": false,
          "mutatesTrackerState": false,
          "privacyClass": "bounded_command_no_raw_state",
          "evidence": [
            "read_only_probe_command"
          ],
          "command": "ee index status --workspace . --json"
        }
      ]
    }
  }
}
