tests/snapshots/error_envelope_golden__error_envelope_storage.snap
---
source: tests/error_envelope_golden.rs
expression: value
---
{
  "schema": "ee.error.v2",
  "error": {
    "code": "storage",
    "message": "Database file corrupted.",
    "severity": "high",
    "repair": "ee doctor --fix-plan --json",
    "repairKind": "actionable",
    "details": {}
  }
}
