tests/snapshots/error_envelope_golden__error_envelope_unsatisfied_degraded_mode.snap
---
source: tests/error_envelope_golden.rs
expression: value
---
{
  "schema": "ee.error.v2",
  "error": {
    "code": "unsatisfied_degraded_mode",
    "message": "Semantic search unavailable and lexical fallback disabled.",
    "severity": "medium",
    "repair": "ee doctor --json",
    "repairKind": "actionable",
    "details": {}
  }
}
