tests/snapshots/error_envelope_golden__error_envelope_usage_with_repair.snap
---
source: tests/error_envelope_golden.rs
expression: value
---
{
  "schema": "ee.error.v2",
  "error": {
    "code": "usage",
    "message": "Unknown command 'xyz'.",
    "severity": "low",
    "repair": "ee --help",
    "repairKind": "actionable",
    "details": {}
  }
}
