tests/snapshots/error_envelope_golden__error_envelope_usage_without_repair.snap
---
source: tests/error_envelope_golden.rs
expression: value
---
{
  "schema": "ee.error.v2",
  "error": {
    "code": "usage",
    "message": "Invalid argument for --format.",
    "severity": "low",
    "details": {}
  }
}
